--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     </div>
 
     <div id="visualization-container">
+      <p style="font-size: 1em; font-weight: 400;">Note: This is the product of the 2015 Broadway Hackathon. For now, the only two shows you can search for are "Allegiance" and "Finding Neverland." For more information, contact Joanna S. Kao (@joannaskao), Derek Miller (@derekkmiller) and David Riordan (@riordan).</p>
       <div id="search">
         Search for a show: &nbsp;<input type="text" placeholder="Enter a show name" id="showInput" />
         <input type="submit" id="showSubmit" />
