cleaned up note and added app description

--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
     </div>
 
     <div id="visualization-container">
-      <p style="font-size: 1em; font-weight: 400;">Note: This is the product of the 2015 Broadway Hackathon. For now, the only two shows you can search for are "Allegiance" and "Finding Neverland." For more information, contact Joanna S. Kao (@joannaskao), Derek Miller (@derekkmiller) and David Riordan (@riordan).</p>
+      <p style="font-size: 1em; font-weight: 400;">Follow the development of a show with Staging, an app that looks at the history of Broadway productions through PlayBill articles.</p>
+
       <div id="search">
         Search for a show: &nbsp;<input type="text" placeholder="Enter a show name" id="showInput" />
         <input type="submit" id="showSubmit" />
@@ -91,6 +92,8 @@
       <h3 id="showName"></h3>
       <div id="year-container"></div>
       <div id="timeline-container"></div>
+
+      <p style="font-size: 0.8em; font-weight: 400;">Note: This is the product of the 2015 Broadway Hackathon. For now, the only two shows you can search for are "Allegiance" and "Finding Neverland." For more information, contact Joanna S. Kao (<a href="http://twitter.com/joannaskao" target="_blank">@joannaskao</a>), Derek Miller (<a href="http://twitter.com/derekkmiller" target="_blank">@derekkmiller</a>) and David Riordan (<a href="http://twitter.com/riordan" target="_blank">@riordan</a>).</p>
 
     </div>
 
