filled in social meta tags

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="format-detection" content="telephone=no">
 
-  <meta property="og:url" content="" />
-  <meta property="og:site_name" content="" />
-  <meta property="og:title" content="" />
-  <meta property="og:type" content="" />
-  <meta property="og:image" content="" />
-  <meta property="og:description" content="" />
+  <meta property="og:url" content="http://joannaskao.github.io/staging/" />
+  <meta property="og:site_name" content="Staging: The Ins and Outs of a Broadway Production" />
+  <meta property="og:title" content="Staging: The Ins and Outs of a Broadway Production" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="http://joannaskao.github.io/staging/images/social.png" />
+  <meta property="og:description" content="Follow the development of a show with Staging, an app that looks at the history of Broadway productions through PlayBill articles." />
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="">
-  <meta name="twitter:title" content="">
-  <meta name="twitter:description" content="">
+  <meta name="twitter:title" content="Staging: The Ins and Outs of a Broadway Production">
+  <meta name="twitter:description" content="Who's in and who's out? Follow the development of a Broadway show.">
   <meta name="twitter:creator" content="">
   <meta name="twitter:image:src" content=""> <!-- at least 280px x 150px for Twitter (image must be < 1MB) -->
   <meta name="twitter:domain" content="">
@@ -32,7 +32,7 @@
   <meta name="twitter:app:id:googleplay" content="">
 
 
-  <title>Staging: The Ins and Outs of Broadway Theater</title>
+  <title>Staging: The Ins and Outs of a Broadway Production</title>
   <link rel="shortcut icon" href="/favicon.ico" />
 
   <link rel="stylesheet" type="text/css" href="css/ajmint-icons.css" />
